# rag-api-project

./: .gitignore  README.md  custom_types.py  data_loader.py  main.py  pyproject.toml  streamlit_app.py  vector_db.py
qdrant_storage/: raft_state.json
qdrant_storage/collections/docs/0/: newest_clocks.json  replica_state.json
qdrant_storage/collections/docs/0/segments/0f49ea63-a8a1-4989-aac6-5f40bf5abd40/: mutable_id_tracker.mappings  mutable_id_tracker.versions
qdrant_storage/collections/docs/0/segments/3db91347-41e7-4e7e-991b-39b000267246/: mutable_id_tracker.mappings  mutable_id_tracker.versions
qdrant_storage/collections/docs/0/segments/b7e8cf29-2596-4b37-aa1a-688dd840d370/: mutable_id_tracker.mappings
qdrant_storage/collections/docs/0/segments/e17ed2fd-7346-4d70-b196-151affc3de52/: mutable_id_tracker.mappings  mutable_id_tracker.versions
